--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-html{
-    box-sizing: border-box;
-  }
-  */ *::before, ::after{
-    box-sizing: inherit;
-  }
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}w
   
   .navigation{
     background: #F6D53B;
