--- a/style.css
+++ b/style.css
@@ -53,12 +53,11 @@ html {
   height: 22rem;
 }
 
-.sidebar > ul{
+.sidebar > ul > li > a{
   font-family: Carrinady;
   font-size: 2rem;
-  margin: .5rem;
-  padding: .5rem;
-  text-decoration-line : none;
+  margin-left: .5rem;
+  text-decoration: none;
 }
 
 .sidecart{
