--- a/typography.css
+++ b/typography.css
@@ -1,4 +1,4 @@
 @font-face {
     font-family: menufont;
-    src: url(Fonts/Carrinady/Carrinady.ttf);
+    src: url(Fonts/Carrinady/Carrinady\ Bold.ttf);
 }
