--- a/typography.css
+++ b/typography.css
@@ -2,3 +2,8 @@
     font-family: menufont;
     src: url(Fonts/Carrinady/Carrinady\ Bold.ttf);
 }
+
+@font-face {
+    font-family: textfont;
+    src: url(Fonts/quizma/Quizma_Light_Demo.otf);
+}
