--- a/style.css
+++ b/style.css
@@ -143,7 +143,6 @@ main{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-left: 1rem;
-    padding-right: 1rem;
 }
 
 .item1name{
@@ -167,28 +166,34 @@ main{
     bottom: 2%;
     margin-top: 1rem;
     width: 12.6vw;
-    height: 3.7vh;
+    height: 5vh;
     background-color: #FFD93D;
     border-radius: 1rem;
     text-align: center;
+    align-items: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .checkoutbtn > span{
-    padding-top: 1rem;
-    text-decoration: none;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
-.banner{
+.content{
     margin-left: 19.2vw;
+    margin-top: 8vh;
 }
+
 
 .banner>img{
     width:75.5vw;
 }
 
 footer{
-    display: flex;
     position: absolute;
     bottom: 0;
     width: 85.4%;
@@ -199,12 +204,23 @@ footer{
     align-content: center;
 }
 
-.socialmedia{
-    align-items: center;
+.footertext{
+    font-family: textfont;
+    padding-left: 1rem;
+    display: inline;
+    border: #47297B;
 }
 
-.footer > span > img{
-    margin-top: 1rem;
+
+.socialmedia > img{
+    padding-top: 1rem;
+    margin-left: 1rem;
     display: inline;
     width: 2rem;
+}
+
+.copyright{
+    font-family: textfont;
+    padding-top: 2rem;
+    padding-left: 1rem;
 }
