--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
     display: flex;
     height: 2rem;
     border-radius: 5rem;
-    margin-left: 20vw;
+    margin-left: 30vw;
     align-items: center;
     justify-items: center;
     background-color: #FFEFA5;
@@ -49,9 +49,14 @@ body{
     outline: none;
 }
 
+.searchicon > img{
+    margin-right: 1rem;
+    width: 1rem;
+}
+
 .searchbox + .headbtn{
     font-family: menufont;
-    margin-left: 30%;
+    margin-left: 10vw;
     text-decoration: none;
     color: #47297B;
 }
@@ -163,7 +168,7 @@ main{
 
 .checkoutbtn{
     position: absolute;
-    bottom: 2%;
+    bottom: 3%;
     margin-top: 1rem;
     width: 12.6vw;
     height: 5vh;
@@ -289,8 +294,7 @@ main{
 }
 
 footer{
-    position: absolute;
-    bottom: 0;
+
     width: 85.3%;
     height: 14.4vh;
     margin-left: 14.7vw;
@@ -299,8 +303,12 @@ footer{
     margin-bottom: 0;
 }
 
+.topfooter{
+    display: flex;
+}
 .footertext{
     font-family: textfont;
+    padding-top: 1.5rem;
     padding-left: 1rem;
     display: inline;
     border: #47297B;
@@ -314,6 +322,9 @@ footer{
     width: 2rem;
 }
 
+.socialmedia +.socialmedia{
+    padding-top: 0.2rem;
+}
 .copyright{
     font-family: textfont;
     padding-top: 2rem;
