--- a/css/typography.css
+++ b/css/typography.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: menufont;
-    src: url(../Fonts/Carrinady/Carrinady.ttf);
+    src: url(../Fonts/Carrinady/Carrinady\ Bold.ttf);
 }
 
 @font-face {
