--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body{
     top: 0%;
     height: 8vh;
     width: 100vw;
-    box-shadow: 0 1px 4px #00000015;;
+    box-shadow: 0 1px 4px #00000015;
 }
 
 .icon{
@@ -337,7 +337,7 @@ footer{
     margin: auto;
     margin-top: 9vh;
     width: 83vw;
-    height: 90vh;
+    height: 89vh;
     border-radius: 1rem;
 }
 .back_button{
@@ -351,20 +351,13 @@ footer{
     width: 1.5rem;
 }
 
-.cartdivider{
-    margin-top: 3rem;
-    width:75.5vw;
-    height: 0.1vh;
-    background-color: #707070;
-}
-
 .content-table {
     border-collapse: collapse;
     margin-left: 2rem;
     font-size: 1rem;
-    max-width: 77vw;
+    max-width: 80vw;
     overflow: hidden;
-  }
+}
   
 .content-table thead tr {
     color: #000000;
@@ -373,10 +366,11 @@ footer{
 }
 
 .content-table th{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: textfont;
 }
+
 .content-table th, .content-table td {
-    padding: 1rem 1rem;
+    padding: 1rem 1.5rem;
 }
 
 .cart_product{
@@ -391,11 +385,44 @@ footer{
     margin-left: 1rem;
 }
 
+.product_quantity{
+    display: flex;
+    margin-right: 15rem;
+}
+
+.product_quantity > div{
+    margin-right: 1rem;
+}
+
 .product_cost{
     margin-top: 80%;
 }
+
+.product_total{
+    margin-right: 1rem;
+}
+
+.cancel{
+    background-color: transparent;
+    border: none;
+}
 .content-table thead th {
     border-bottom: 0.05rem solid #707070;
+}
+
+.progress{
+    position: fixed;
+    bottom: 0;
+    width: 83vw;
+    border-radius: 1rem;
+    height: 13.5vh;
+    box-shadow: 0px -2px 0px 0px #00000015;
+    background-color: #FFEFA5;
+}
+
+.checkout_status > img{
+    margin-top: 0.5rem;
+    width: 20rem;
 }
 /* The code below are for the productpage.html */
 /* The code below are for the productlist.html */
