--- a/css/style.css
+++ b/css/style.css
@@ -412,6 +412,7 @@ footer{
 
 .progress{
     position: fixed;
+    display: flex;
     bottom: 0;
     width: 83vw;
     border-radius: 1rem;
@@ -421,8 +422,29 @@ footer{
 }
 
 .checkout_status > img{
+    margin-left: 2rem;
     margin-top: 0.5rem;
     width: 20rem;
+}
+
+.item_number{
+    font-size: 1.5rem;
+    font-family: textfont;
+    margin-top: 2.5rem;
+    margin-left: 20rem;
+}
+
+.cart_confirm{
+    font-family: textfont;
+    font-size: 1.5rem;
+    margin-top: 1.8rem;
+    margin-left: 15rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.checkoutbtn{
+    border: none;
 }
 /* The code below are for the productpage.html */
 /* The code below are for the productlist.html */
