--- a/css/style.css
+++ b/css/style.css
@@ -507,5 +507,147 @@ footer{
 }
 
 /* The code below are for the productlist.html */
-/* The code below are for the confirmation.html */
+
 /* The code below are for the checkout.html */
+.checkout_content{
+    display: flex;
+}
+
+.checkout_info{
+    display: flex;
+    margin-top: 4rem;
+
+}
+
+.customer_detail{
+    margin-left: 5rem;
+}
+
+.customer_detail > div >input{
+    background-color: #EFEFEF;
+    width: 32rem;
+    height: 3rem;
+    border: none;
+    box-shadow: 1px 1px 2px 0px #00000015;
+    margin-bottom: 1rem;
+}
+
+.cname{
+    display: flex;
+}
+
+.cname > div > input{
+    background-color: #EFEFEF;
+    width: 15rem;
+    height: 3rem;
+    border: none;
+    box-shadow: 1px 1px 2px 0px #00000015;
+    margin-bottom: 1rem;
+    margin-right: 2rem;
+}
+
+.caddress{
+    display: flex;
+}
+
+.caddress > div > input{
+    background-color: #EFEFEF;
+    width: 10rem;
+    height: 3rem;
+    border: none;
+    box-shadow: 1px 1px 2px 0px #00000015;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+}
+
+.card_info{
+    display: flex;
+}
+
+.card_info > div > input{
+    background-color: #EFEFEF;
+    width: 15rem;
+    height: 3rem;
+    border: none;
+    box-shadow: 1px 1px 2px 0px #00000015;
+    margin-bottom: 1rem;
+    margin-right: 2rem;
+}
+
+
+/* The code below are for the customized
+checkbox */
+/* The container */
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 1rem;
+    background-color: #EFEFEF;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+  
+/* Hide the browser's default checkbox */
+.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+  
+/* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;	
+    background-color: #EFEFEF;
+}
+  
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+  
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+    background-color: #2196F3;
+}
+  
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+  
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+    display: block;
+}
+  
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+/* The code for the customised checkbox is appropriated and modified from 
+from: https://www.w3schools.com/howto/howto_css_custom_checkbox.asp */
+
+/* The code below are for the confirmation.html */
+
