--- a/css/style.css
+++ b/css/style.css
@@ -536,10 +536,13 @@ footer{
     height: 20rem;
     margin-bottom: 4rem;
     margin-right: 4rem;
-    background-color: #FCE380;
+    background-color: #FFE989;
     box-shadow: 1px 1px 2px 0px #00000015;
 }
 
+#cart_i2{
+    display: none;
+}
 .pro1_img > img{
     width: 14rem;
 }
